version/0.19/_sources/api/solver/_autosummary/settings/multiphase_4.rst.txt
:orphan:

.. _multiphase_4:

multiphase
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.multiphase_4.multiphase
    :show-inheritance:

.. rubric:: Attributes

========================================================================   =======================================

Attribute                                                                                                  Summary

========================================================================   =======================================
:ref:`open_channel <open_channel_1>`                                                                 Open Channel.

:ref:`inlet_number <inlet_number>`                                                                 Inlet Group ID.

:ref:`secondary_phase_for_inlet <secondary_phase_for_inlet>`                            Secondary Phase for Inlet.

:ref:`free_surface_level <free_surface_level>`                                                 Free Surface Level.

:ref:`bottom_level <bottom_level>`                                                                   Bottom Level.

:ref:`density_interpolation_method <density_interpolation_method>`                   Density Interpolation Method.

:ref:`pb_disc_bc <pb_disc_bc>`                                                                 'pb_disc_bc' child.

:ref:`pb_disc <pb_disc>`                                                                          'pb_disc' child.

:ref:`pb_qmom_bc <pb_qmom_bc>`                                                                 'pb_qmom_bc' child.

:ref:`pb_qmom <pb_qmom>`                                                                          'pb_qmom' child.

:ref:`pb_qbmm_bc <pb_qbmm_bc>`                                                                 'pb_qbmm_bc' child.

:ref:`pb_qbmm <pb_qbmm>`                                                                          'pb_qbmm' child.

:ref:`pb_smm_bc <pb_smm_bc>`                                                                    'pb_smm_bc' child.

:ref:`pb_smm <pb_smm>`                                                                             'pb_smm' child.

:ref:`pb_dqmom_bc <pb_dqmom_bc>`                                                              'pb_dqmom_bc' child.

:ref:`pb_dqmom <pb_dqmom>`                                                                       'pb_dqmom' child.

:ref:`slip_velocity_specification <slip_velocity_specification>`               Slip Velocity Specification Method.

:ref:`phase_velocity_ratio <phase_velocity_ratio>`                                          Phase Velocity Ratio .

:ref:`volume_fraction <volume_fraction_1>`                                                        Volume Fraction.

:ref:`granular_temperature <granular_temperature_1>`                                         Granular Temperature.

:ref:`interfacial_area_concentration <interfacial_area_concentration_1>`           Interfacial Area Concentration.

:ref:`relative_humidity <relative_humidity>`                                                    Relative humidity.

:ref:`liquid_mass_fraction <liquid_mass_fraction>`                                           Liquid Mass Fraction.

:ref:`log10_droplets_per_unit_volume <log10_droplets_per_unit_volume>`            Log10(Droplets Per Unit Volume).

========================================================================   =======================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_9>`                                   'child_object_type' of phase.

====================================================   ===========================================

