version/0.24/_sources/api/solver/_autosummary/settings/multiphase_4.rst.txt
:orphan:

.. _multiphase_4:

multiphase
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.multiphase_4.multiphase
    :show-inheritance:

.. rubric:: Attributes

========================================================================   ===========================================

Attribute                                                                                                      Summary

========================================================================   ===========================================
:ref:`open_channel <open_channel_2>`                                                                     Open Channel.

:ref:`inlet_number <inlet_number>`                                                                     Inlet Group ID.

:ref:`secondary_phase_for_inlet <secondary_phase_for_inlet>`                                Secondary Phase for Inlet.

:ref:`free_surface_level <free_surface_level_1>`                                                   Free Surface Level.

:ref:`bottom_level <bottom_level_1>`                                                                     Bottom Level.

:ref:`density_interpolation_method <density_interpolation_method_1>`                     Density Interpolation Method.

:ref:`population_balance <population_balance>`                                            Population balance settings.

:ref:`slip_velocity_specification <slip_velocity_specification>`                   Slip Velocity Specification Method.

:ref:`phase_velocity_ratio <phase_velocity_ratio>`                                              Phase Velocity Ratio .

:ref:`volume_fraction <volume_fraction_1>`                                                            Volume Fraction.

:ref:`granular_temperature <granular_temperature>`                                       Specify granular temperature.

:ref:`interfacial_area_concentration <interfacial_area_concentration>`         Specify interfacial area concentration.

:ref:`relative_humidity <relative_humidity_1>`                                                      Relative humidity.

:ref:`liquid_mass_fraction <liquid_mass_fraction_1>`                                             Liquid Mass Fraction.

:ref:`log10_droplets_per_unit_volume <log10_droplets_per_unit_volume_1>`              Log10(Droplets Per Unit Volume).

========================================================================   ===========================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_11>`                                  'child_object_type' of phase.

:ref:`phase_child <phase_child_39>`                                  'child_object_type' of phase.

====================================================   ===========================================

